[workspace]
members = ["common", "firewalls", "pinger", "serverare"]
resolver = "3"

[workspace.dependencies]
crossterm = "0.29"
libc = "0.2.186"
ping = "0.7.1"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json"] }
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell"] }
thiserror = "2.0.18"

# local deps
common.path = "common/"
firewalls.path = "firewalls/"
pinger.path = "pinger/"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
strip = true
codegen-units = 1
