[package]
name = "firewalls"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
